--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -52,9 +52,11 @@ body {
 }
 
 .card-header {
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
+     width: 100%;
+    height: 242px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-body {
@@ -72,13 +74,17 @@ body {
   display: none;
 }
 
+.paleta {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
 .paleta .box {
   width: 30px;
   height: 30px;
   border: 1px solid black;
   cursor: pointer;
-  display: flex;
-  justify-content: space-between;
   margin: 5px;
   padding: 0 10px;
 }
