--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -135,13 +135,29 @@ img {
 
 footer {
   color: white;
+  background-color: #361607;
+  height: 24vh;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
+
 
 .social {
   width: 100%;
-  float: left;
   display: flex;
-  margin: auto;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.social h2{
+  font-size: 1.5em;
 }
 
 .social ul {
