--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -26,7 +26,7 @@ body {
   color: white;
   font-size: 21px;
   font-family: Georgia, "Times New Roman", Times, serif;
-  margin: 10px 50px 20px;
+  margin: 25px 50px 20px;
 }
 
 .container {
@@ -52,11 +52,11 @@ body {
 }
 
 .card-header {
-     width: 100%;
-    height: 242px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 242px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-body {
@@ -78,15 +78,16 @@ body {
   display: flex;
   justify-content: center;
   gap: 10px;
+  padding: 10px;
 }
 
 .paleta .box {
   width: 30px;
   height: 30px;
   border: 1px solid black;
-  cursor: pointer;
   margin: 5px;
   padding: 0 10px;
+  cursor: pointer;
 }
 
 .paleta .box:hover {
@@ -97,19 +98,25 @@ body {
   background-color: red;
 }
 .paleta .box.blue {
-  background-color: blue;
+  background-color: #1e2c53;
 }
-.paleta .box.green {
-  background-color: green;
-}
+
 .paleta .box.lilac {
-  background-color: rgb(199, 142, 203);
+  background-color: #ff94ea;
 }
 .paleta .box.orange {
-  background-color: orange;
+  background-color: #fc3f1e;
 }
 .paleta .box.black {
   background-color: black;
+}
+
+.paleta .box.pink {
+  background-color: #ff51a4;
+}
+
+.paleta .box.rose {
+  background-color: #f8b5c7;
 }
 
 input:checked + .cores {
@@ -133,18 +140,25 @@ img {
   border: none;
 }
 
+.tamanho a {
+  color: #e2aab2;
+  font-size: 18px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-decoration: underline;
+}
+
 footer {
   color: white;
   background-color: #361607;
   height: 24vh;
+  margin-top: 5vh;
   display: flex;
   align-content: center;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
-
 
 .social {
   width: 100%;
@@ -156,7 +170,7 @@ footer {
   gap: 20px;
 }
 
-.social h2{
+.social h2 {
   font-size: 1.5em;
 }
 
